GP, smoothing a stroke's weights multiple times will lead to unweightable points #60678

Closed
opened 2019-01-20 20:02:49 +01:00 by heini · 2 comments

Operating system: Win 10 64bit
Graphics card: Geforce 940M

Broken:
2.80, b0dee09a6d win64, blender2.8

Short description of error

after smoothing weights of a GP stroke with too many iterations, some points will turn black and become unresponsive to the weight brush

Exact steps for others to reproduce the error

  • draw several overlapping strokes with a lot of points
  • smooth weights and increase the iterations
  • some points are now black and can't be painted over anymore

start at 00:43
weightpaint_crash0001-1782.mp4

Operating system: Win 10 64bit Graphics card: Geforce 940M Broken: 2.80, b0dee09a6d55 win64, blender2.8 **Short description of error** after smoothing weights of a GP stroke with too many iterations, some points will turn black and become unresponsive to the weight brush **Exact steps for others to reproduce the error** - draw several overlapping strokes with a lot of points - smooth weights and increase the iterations - some points are now black and can't be painted over anymore start at 00:43 [weightpaint_crash0001-1782.mp4](https://archive.blender.org/developer/F6347363/weightpaint_crash0001-1782.mp4)
Author

Added subscriber: @heini

Added subscriber: @heini
Antonio Vazquez self-assigned this 2019-01-20 20:39:10 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60678
No description provided.