Fix T60678: GP, smoothing a stroke's weights multiple times will lead to unweightable points